<resources>
    <string name="app_name">Fiestapp!</string>
    <string name="tituloSplash">F I E S T A P P!</string>
    <string name="eslogan">Por momentos aún mejores.</string>
    <string name="nueva_fiesta">Agregar fiesta</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="seguro_cerrar_sesion">¿De verdad quieres cerrar sesión?</string>

    <string name="facebook_app_id">209586026220608</string>
    <string name="fb_login_protocol_scheme">fb209586026220608</string>

    <!-- TITULOS -->
    <string name="mis_fiestas">Mis fiestas</string>
    <string name="galeria">Galería</string>
    <string name="subir_fotos">Subir Fotos</string>

    <!-- FIESTA -->
    <string name="dias_faltantes">DÍAS RESTANTES</string>
    <string name="invitados">INVITADOS</string>
    <string name="tipo_fiesta">TIPO DE FIESTA</string>
    <string name="mas_info">+ INFO</string>
    <string name="ver_galeria">GALERÍA</string>
    <string name="subir_foto">SUBIR FOTO</string>
    <string name="quien_gusta">¿QUIÉN TE GUSTA?</string>
    <string name="proponer_cancion">PROPONER CANCIÓN</string>
    <string name="que_opinion_musica">¿Que opinás sobre la música?</string>
    <string name="error_login">Ocurrió un error al conectar con Facebook.</string>
    <string name="cancelo_login">Se ha cancelado el inicio con Facebook.</string>
    <string name="sin_fotos">Aún nadie ha subido fotos.\n ¡Sé el primero en poner onda!</string>
    <string name="sin_invitados">Aún ningún invitado se ha añadido a la fiesta.</string>
    <string name="opinion_musica_no_disponible">¡Durante la fiesta podrás puntuar la música!</string>

    <!-- SUBIR FOTO -->
    <string name="progreso_foto">Subiendo foto...</string>

    <!-- MIS FIESTAS -->
    <string name="no_hay_fiestas">Aún no has añadido ninguna fiesta, ¿qué esperas? ¡Diviértete!</string>

    <!-- NUEVA FIESTA -->
    <string name="ingrese_codigo">Ingresá el código de la fiesta a la que querés unirte:</string>
    <string name="codigo_vacio">Ingresá algún código</string>
    <string name="ya_existe_fiesta">La fiesta que quieres añadir ya está en tu lista de fiestas</string>
</resources>
